# blackroad-internet

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
apps/browser/: README.md  index.html  package.json  tailwind.config.ts
apps/browser/src/: App.tsx
apps/browser/src-tauri/: Cargo.toml  tauri.conf.json
apps/browser/src-tauri/capabilities/: default.json
apps/browser/src-tauri/src/: lib.rs  main.rs
apps/browser/src-tauri/src/commands/: mod.rs  navigation.rs  settings.rs  verification.rs
apps/browser/src-tauri/src/store/: mod.rs
apps/browser/src-tauri/src/verification/: mod.rs  ollama.rs  reputation.rs
apps/browser/src/components/browser/: AddressBar.tsx  BookmarksPage.tsx  BrowserFrame.tsx  CommandPalette.tsx  HistoryPage.tsx  NavigationControls.tsx  NewTabPage.tsx  PrivacyDashboard.tsx  ReaderMode.tsx  StatusBar.tsx  TabBar.tsx
apps/browser/src/components/search/: SearchPage.tsx
apps/browser/src/components/sidebar/: AccuracyScore.tsx  ClaimsList.tsx  (+2 more)
apps/browser/src/hooks/: useBookmarks.ts  useHistory.ts  useKeyboardShortcuts.ts  useTabs.ts  useVerification.ts
apps/browser/src/styles/: globals.css
apps/browser/src/types/: browser.ts  verification.ts
workers/search-api/: README.md  package.json  tsconfig.json  wrangler.toml
workers/search-api/src/: index.ts
workers/verification-api/: README.md  package.json  wrangler.toml
workers/verification-api/migrations/: 0001_init.sql
workers/verification-api/src/: index.ts
workers/verification-api/src/routes/: reports.ts  reputation.ts  verify.ts
